added Swagger anotations 2.0
