# app/Http/Controllers/AuthController.php
@@ -12,7 +12,15 @@ use Illuminate\Support\Facades\Auth;
 use Illuminate\Support\Facades\Hash;
 
 
-
+/**
+ * @OA\Schema(
+ *     schema="UserAuth",
+ *     required={"firstname", "lastname", "login"},
+ *     @OA\Property(property="firstname", type="string", example="Barry"),
+ *     @OA\Property(property="lastname", type="string", example="Berkman"),
+ *     @OA\Property(property="login", type="string", example="bberkman@gmail.com")
+ * )
+ */
 class AuthController extends Controller
 {
     /**
@@ -26,7 +34,38 @@ class AuthController extends Controller
     }
 
 
-
+    /**
+     * @OA\Post(
+     *     path="/auth/register",
+     *     summary="Create a user",
+     *     description="Create a new user",
+     *     tags={"Auth"},
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             @OA\Property(property="firstname", type="string", example="Saul"),
+     *             @OA\Property(property="lastname", type="string", example="Goodman"),
+     *             @OA\Property(property="login", type="string", example="JMM@gmail.com"),
+     *             @OA\Property(property="password", type="string", example="jgdmcslddkris22")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=201,
+     *         description="Successful operation",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(
+     *                 property="data",
+     *                 ref="#/components/schemas/UserAuth"
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=422,
+     *         description="Validation error"
+     *     )
+     * )
+     */
     public function register(RegisterRequest $request){
 
         $user = User::create([
@@ -39,13 +78,36 @@ class AuthController extends Controller
         return new UserResource($user);
     }
 
+
+
     /**
-     * Get a JWT via given credentials.
-     *
-     * @return \Illuminate\Http\JsonResponse
+     * @OA\Post(
+     *     path="/auth/login",
+     *     summary="Log in a user",
+     *     description="Log in a user",
+     *     tags={"Auth"},
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             @OA\Property(property="login", type="string", example="JMM@gmail.com"),
+     *             @OA\Property(property="password", type="string", example="jgdmcslddkris22")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=201,
+     *         description="Successful operation",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="access_token", type="string", example="ewccxlv..."),
+     *             @OA\Property(property="token_type", type="string", example="bearer"),
+     *             @OA\Property(property="expires_in", type="string", example=3600)
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=422,
+     *         description="Validation error"
+     *     )
+     * )
      */
-
-
     public function login()
     {
         $credentials = request(['login', 'password']);
@@ -60,9 +122,19 @@ class AuthController extends Controller
 
 
     /**
-     * Log the user out (Invalidate the token).
-     *
-     * @return \Illuminate\Http\JsonResponse
+     * @OA\Post(
+     *     path="/auth/logout",
+     *     summary="Log out a user",
+     *     description="Log out a user, invalidate token",
+     *     tags={"Auth"},
+     *     @OA\Response(
+     *         response=201,
+     *         description="Successful operation",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Successfully logged out")
+     *         )
+     *     )
+     * )
      */
     public function logout()
     {
